[package]
name = "arti-axum"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]

[dependencies]
axum = "0.7.4"
futures-util = "0.3.30"
hyper = "1.1.0"
hyper-util = "0.1.3"
pin-project-lite = "0.2.13"
tokio = "1.36.0"
tor-cell = "0.16.0"
tor-hsservice = "0.7.0"
tor-proto = { version = "0.16.0", features = ["hs-service", "tokio"] }
tower = "0.4.13"
tower-service = "0.3.2"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
arti-client = { version = "0.14.0", features = ["tokio", "onion-service-service"]}
