[package]
name = "arti-axum"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]
description = "axum::serve for onion services"
readme = "README.md"
homepage = "https://github.com/jgraef/arti-axum"
repository = "https://github.com/jgraef/arti-axum"
license = "MIT"
keywords = ["axum", "arti", "onion", "tor"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
axum = "0.7.5"
futures-util = "0.3.30"
hyper = "1.4.1"
hyper-util = "0.1.6"
pin-project-lite = "0.2.14"
tokio = "1.38.1"
tor-cell = "0.20.0"
tor-hsservice = "0.20.0"
tor-proto = { version = "0.20.0", features = ["hs-service", "tokio"] }
tower = { version = "0.4.13", features = ["util"] }
tower-service = "0.3.2"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
arti-client = { version = "0.20.0", features = ["tokio", "onion-service-service"]}
